# rethinking-evals

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  bibliography_notes.md  file_tree.txt  implementation_architecture.md  mathematical_framework.md  paper_analysis.md  pyproject.toml  quick_start.py  requirements.txt  requirements.txt.old
.claude/: CLAUDE.md
config/: experiments.yaml  models.yaml
experiments/: run_ablation.py  run_baselines.py  run_gp_prediction.py  run_main_experiment.py
manifold_of_failure/: INDEX.md  README.md  TODO_MAPPING.md  USAGE_GUIDE.md
manifold_of_failure/config/: experiments.yaml  harm_categories.yaml  models.yaml
manifold_of_failure/experiments/: run_gp_prediction.py  run_main_experiment.py
manifold_of_failure/src/core/: archive.py  behavioral_space.py  map_elites.py
manifold_of_failure/src/mutation/: base.py  entity_substitution.py  paraphrasing.py  semantic_interp.py
manifold_of_failure/src/utils/: seed_prompts.py
manifold_of_failure/visualization/: coverage_plots.py  gp_plots.py
results/: baselines_gpt5_mini_20260212_194445.json  baselines_llama3_8b_20260202_192938_random  baselines_llama3_8b_gcg.json  baselines_llama3_8b_pair.json  baselines_llama3_8b_tap.json
results/baselines/: baselines_gpt5_mini_20260212_194445  baselines_gpt_oss_20b_20260126_233506_pair  baselines_gpt_oss_20b_20260126_233506_random  baselines_gpt_oss_20b_20260126_233506_tap
results/baselines/run_0/: gcg_results.json  random_results.json
results/baselines/run_1/: gcg_results.json  random_results.json
results/gpt5_mini_20260102_221925/: final_archive.json  final_statistics.json  heatmap.npy  seed_prompts.txt  statistics_history.json
results/gpt5_mini_20260102_221925/checkpoints/: archive_iter_1000.pkl  archive_iter_2000.pkl  archive_iter_3000.pkl  archive_iter_4000.pkl  archive_iter_5000.pkl  stats_iter_1000.json  stats_iter_2000.json  stats_iter_3000.json  stats_iter_4000.json  stats_iter_5000.json
results/gpt5_mini_20260107_182052/: final_archive.json  final_archive.pkl  final_statistics.json  heatmap.npy  seed_prompts.txt  statistics_history.json
results/gpt5_mini_20260107_182052/checkpoints/: archive_iter_1000.pkl  archive_iter_10000.pkl  archive_iter_11000.pkl  archive_iter_12000.pkl  archive_iter_13000.pkl  archive_iter_14000.pkl  archive_iter_2000.pkl  archive_iter_3000.pkl  archive_iter_4000.pkl  archive_iter_5000.pkl  archive_iter_6000.pkl  archive_iter_7000.pkl  archive_iter_8000.pkl  archive_iter_9000.pkl  stats_iter_1000.json  stats_iter_10000.json  stats_iter_11000.json  stats_iter_12000.json  (+11 more)
results/gpt_oss_20b_20251228_234655/: final_archive.json  final_archive.pkl  final_statistics.json  heatmap.npy  seed_prompts.txt  statistics_history.json
results/gpt_oss_20b_20260119_193131/: final_archive.json  final_archive.pkl  final_statistics.json  heatmap.npy  seed_prompts.txt  statistics_history.json
results/llama3_8b_20251228_232504/: final_archive.json  final_statistics.json  heatmap.npy  seed_prompts.txt  statistics_history.json
results/llama3_8b_20260112_193121/: final_archive.json  final_statistics.json  heatmap.npy  seed_prompts.txt  statistics_history.json
src/baselines/: gcg_blackbox.py  gcg_whitebox.py  genetic_attack.py  pair.py  random_sampling.py  tap.py
src/core/: archive.py  behavioral_space.py  behavioral_space_extended.py  map_elites_with_validity.py  quality_metrics.py  semantic_validity.py
src/models/: target_llm.py
src/mutation/: adversarial_suffix.py  crossover.py  random_axis.py
src/prediction/: gaussian_process.py
src/utils/: seed_prompts.py
visualization/: heatmaps.py
(+78 files in other folders)
